* add new Logo * bugfix waitinglist * joinpage redifined

--- a/.env
+++ b/.env
@@ -95,6 +95,7 @@ laf_CreateServerOpenToEveryone=1
 laf_keycloakGroupToCreateServer=/user
 laf_administratorEmail=admin@localhost.de
 laf_notificationUrl=""
+laf_bbb_Url=""
 ###< LaF ###
 
 ###> Default Jitsi Server ###
