fullcallendar IO implemented

--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.2",
-        "@fullcalendar/bootstrap": "^5.5.0",
-        "@fullcalendar/core": "^5.5.0",
-        "@fullcalendar/daygrid": "^5.5.0",
-        "@fullcalendar/list": "^5.5.0",
+        "@fullcalendar/bootstrap": "^5.7.0",
+        "@fullcalendar/core": "^5.7.0",
+        "@fullcalendar/daygrid": "^5.7.0",
+        "@fullcalendar/interaction": "^5.7.0",
+        "@fullcalendar/list": "^5.7.0",
         "@fullcalendar/moment": "^5.5.0",
         "@fullcalendar/resource-common": "^5.5.0",
+        "@fullcalendar/timegrid": "^5.7.0",
         "autosize": "^4.0.2",
         "bootstrap": "^4.5.3",
         "chart.js": "^2.9.4",
