registerEmailAdress was missing in .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -24,6 +24,7 @@ CRON_TOKEN=<sha256>
 CRON_IPADRESS=127.0.0.1
 
 ###Emails###
+registerEmailAdress=register@local.local
 registerEmailName=datenschutz.domain.com
 DEV_EMAIL=dev@domain.com
 DEFAULT_EMAIL=not@domain.com
