Be able to customize Text under Calendar and to hide some buttons or complete bar with buttons below calendar

--- a/.env.sample
+++ b/.env.sample
@@ -62,6 +62,11 @@ laf_CreateServerOpenToEveryone=1
 laf_keycloakGroupToCreateServer=/user
 laf_administratorEmail=admin@localhost.de
 laf_notificationUrl=""
+laf_hideRegistrationOnCalenderView=false
+laf_hideDashboardOnCalenderView=false
+laf_hideButtonsOnCalenderView=false
+#laf_customTextOnCalenderView can be undefined, "hide" or custom Text including html
+laf_customTextOnCalenderView=
 ###< LaF ###
 
 ###> Default Jitsi Server ###
