--- a/.env
+++ b/.env
@@ -96,6 +96,11 @@ laf_keycloakGroupToCreateServer=/user
 laf_administratorEmail=admin@localhost.de
 laf_notificationUrl=""
 laf_bbb_Url=""
+laf_hideRegistrationOnCalenderView=false
+laf_hideDashboardOnCalenderView=false
+laf_hideButtonsOnCalenderView=false
+#laf_customTextOnCalenderView can be undefined, none, "hide" or custom Text including html
+laf_customTextOnCalenderView=
 ###< LaF ###
 
 ###> Default Jitsi Server ###
