--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -23,3 +23,7 @@ twig:
         laf_administratorEmail: '%env(laf_administratorEmail)%'
         laf_notificationUrl: '%env(laf_notificationUrl)%'
         laf_bbb_Url: '%env(laf_bbb_Url)%'
+        laf_hideRegistrationOnCalenderView: '%env(laf_hideRegistrationOnCalenderView)%'
+        laf_hideDashboardOnCalenderView: '%env(laf_hideDashboardOnCalenderView)%'
+        laf_hideButtonsOnCalenderView: '%env(laf_hideButtonsOnCalenderView)%'
+        laf_customTextOnCalenderView: '%env(laf_customTextOnCalenderView)%'
