Logger can bes switched on and off via env

--- a/.env
+++ b/.env
@@ -101,6 +101,7 @@ laf_hideDashboardOnCalenderView=false
 laf_hideButtonsOnCalenderView=false
 #laf_customTextOnCalenderView can be undefined, none, "hide" or custom Text including html
 laf_customTextOnCalenderView=
+laf_logging=0
 ###< LaF ###
 
 ###> Default Jitsi Server ###
