--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,7 +23,8 @@ parameters:
     laF_pexel_refresh_time: '%env(laF_pexel_refresh_time)%'
     laF_baseUrl: '%env(laF_baseUrl)%'
     laF_emailTextLogin: '%env(laF_emailTextLogin)%'
-    laf_keycloakGroupToCreateServer: '%env(laf_keycloakGroupToCreateServer)'
+    laf_keycloakGroupToCreateServer: '%env(laf_keycloakGroupToCreateServer)%'
+    laf_logging: '%env(laf_logging)%'
 services:
     # default configuration for services in *this* file
     _defaults:
