update room controller to copy free fields remove some links which leads to confussion

--- a/.env
+++ b/.env
@@ -102,6 +102,8 @@ laf_hideButtonsOnCalenderView=false
 #laf_customTextOnCalenderView can be undefined, none, "hide" or custom Text including html
 laf_customTextOnCalenderView=
 laf_logging=0
+laf_CalendarText="Wer eine datenschutzfreundliche Event-Manager Software benötigt, kommt um den Open Event-Manager nicht herum"
+laf_loginButton="Login"
 ###< LaF ###
 
 ###> Default Jitsi Server ###
