--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
     "ext-ctype": "*",
     "ext-iconv": "*",
     "composer/package-versions-deprecated": "^1.10",
+    "doctrine/annotations": "^1.0",
+    "doctrine/doctrine-bundle": "^2.5",
+    "doctrine/doctrine-migrations-bundle": "^3.2",
+    "doctrine/orm": "^2.10",
     "dpolac/twig-lambda": "^1.0",
     "eluceo/ical": "0.16.*",
     "endroid/qr-code-bundle": "^4.0",
@@ -14,33 +18,37 @@
     "knpuniversity/oauth2-client-bundle": "^2.5",
     "laminas/laminas-code": "^3.4",
     "laminas/laminas-escaper": "^2.6",
+    "phpdocumentor/reflection-docblock": "^5.3",
     "phpoffice/phpspreadsheet": "^1.17",
-    "sensio/framework-extra-bundle": "^5.3",
+    "phpstan/phpdoc-parser": "^1.2",
+    "sensio/framework-extra-bundle": "^5.4",
     "stevenmaguire/oauth2-keycloak": "^2.2",
     "symfony/apache-pack": "^1.0",
-    "symfony/asset": "5.3.*",
-    "symfony/console": "5.3.*",
-    "symfony/dotenv": "5.3.*",
-    "symfony/expression-language": "5.3.*",
+    "symfony/asset": "5.4.*",
+    "symfony/console": "5.4.*",
+    "symfony/dotenv": "5.4.*",
+    "symfony/expression-language": "5.4.*",
     "symfony/flex": "^1.3.1",
-    "symfony/form": "5.3.*",
-    "symfony/framework-bundle": "5.3.*",
-    "symfony/http-client": "5.3.*",
-    "symfony/intl": "5.3.*",
-    "symfony/mailer": "5.3.*",
+    "symfony/form": "5.4.*",
+    "symfony/framework-bundle": "5.4.*",
+    "symfony/http-client": "5.4.*",
+    "symfony/intl": "5.4.*",
+    "symfony/mailer": "5.4.*",
     "symfony/monolog-bundle": "^3.1",
-    "symfony/orm-pack": "*",
-    "symfony/process": "5.3.*",
-    "symfony/security-bundle": "5.3.*",
-    "symfony/serializer-pack": "*",
+    "symfony/process": "5.4.*",
+    "symfony/property-access": "5.4.*",
+    "symfony/property-info": "5.4.*",
+    "symfony/proxy-manager-bridge": "5.4.*",
+    "symfony/security-bundle": "5.4.*",
+    "symfony/serializer": "5.4.*",
     "symfony/swiftmailer-bundle": "^3.4",
-    "symfony/templating": "5.3.*",
-    "symfony/translation": "5.3.*",
-    "symfony/twig-pack": "*",
-    "symfony/validator": "5.3.*",
-    "symfony/web-link": "5.3.*",
+    "symfony/templating": "5.4.*",
+    "symfony/translation": "5.4.*",
+    "symfony/twig-bundle": "5.4.*",
+    "symfony/validator": "5.4.*",
+    "symfony/web-link": "5.4.*",
     "symfony/webpack-encore-bundle": "^1.7",
-    "symfony/yaml": "5.3.*",
+    "symfony/yaml": "5.4.*",
     "twig/cssinliner-extra": "^3.0",
     "twig/extra-bundle": "~3.1",
     "twig/inky-extra": "^3.0",
@@ -51,11 +59,14 @@
   "require-dev": {
     "dama/doctrine-test-bundle": "^6.5",
     "doctrine/doctrine-fixtures-bundle": "^3.4",
-    "symfony/debug-pack": "*",
+    "phpunit/phpunit": "^9.5",
+    "symfony/browser-kit": "5.4.*",
+    "symfony/css-selector": "5.4.*",
+    "symfony/debug-bundle": "5.4.*",
     "symfony/maker-bundle": "^1.0",
-    "symfony/phpunit-bridge": "^5.3",
-    "symfony/profiler-pack": "*",
-    "symfony/test-pack": "*",
+    "symfony/phpunit-bridge": "^5.4",
+    "symfony/stopwatch": "5.4.*",
+    "symfony/web-profiler-bundle": "5.4.*",
     "symfony/web-server-bundle": "4.4.*"
   },
   "config": {
@@ -100,7 +111,7 @@
   "extra": {
     "symfony": {
       "allow-contrib": false,
-      "require": "5.3.*"
+      "require": "5.4.*"
     }
   }
 }
