--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,7 +2,7 @@ security:
     encoders:
         App\Entity\User:
             algorithm: auto
-
+    enable_authenticator_manager: true
 
 
     role_hierarchy:
@@ -23,14 +23,12 @@ security:
             security: false
         main:
             pattern: ^/
-            anonymous:    true
             switch_user: true
             logout:
                 path:   app_logout
-                target: logout_keycloak
-            guard:
-                authenticators:
-                    - App\Security\GuardServiceKeycloak
+                target: index
+            custom_authenticators:
+                - App\Security\KeycloakAuthenticator
 
 
     # Easy way to control access for large sections of your site
